findly-builder/src/app/components/index/index.component.scss
/* ... */
::ng-deep perfect-scrollbar .ps--active-y{
    .ps__thumb-y{
        width: 3px !important;
    }
    .ps__rail-y{
        width: 3px !important;
    }
    .ps__thumb-x{
        display: none !important;
    }
    .ps__rail-x{
        display: none !important;
    }
}
:host ::ng-deep .example-chip-list {
    width: 100%;
    .mat-form-field-wrapper{
        padding: 0;
        .mat-form-field-flex{
            .mat-form-field-infix{
                margin: 0;
                padding: 0;
                border: 0;
                .mat-chip-list{
                    .mat-chip-list-wrapper{
                        border-radius: 3px;
                        border: solid 1px #BDC1C6;       
                        margin: 0;
                        font-family: Inter !important;
                        .mat-input-element{
                            margin: 0;
                            border: 0;
                            height: 36px;
                            padding-left: 10px;
                            &:focus{   
                                border: 0 !important;                             
                                outline: 0 !important;
                            }
                        }
                        .mat-chip{
                            border-radius: 4px;
                            background-color: #e5e8ec;
                            padding: 0px 9px;
                            margin: 3px 0px 3px 3px;
                            min-height: 30px;
                            &:hover{
                                &::after{
                                    opacity: 0.09;
                                }
                            }
                            .mat-val{
                                color: #9B9B9B;
                                font-size: 12px;
                                font-weight: bold;
                            }
                            .mat-icon{
                                width: auto;
                                height: auto;
                                opacity: 0.8;
                                img{
                                    width: 11px;
                                    height: 11px;
                                    vertical-align: middle;
                                    position: relative;
                                    top: -1px;
                                    left: 2px;
                                }
                            }
                        }                        
                    }                        
                }
            }
        }                        
    }
    .mat-form-field-label-wrapper{
        padding: 0;
        height: 36px;
        top: 5px;
        .mat-form-field-label{
            margin: 0;
            top: 6px;
            left: 10px;
            span{
                font-weight: 400 !important;
                color: #9B9B9B !important;
            }
        }
    }
    .mat-form-field-subscript-wrapper{
        margin: 0;
        top: 0;
    }
    .mat-form-field-underline{
        display: none;
    }
}
.customScript{
    textarea{
        width: 600px;
        height: 400px;
    }
}
.empty-list{
    width: 320px;
    margin: 0 auto;
    // height: calc(100% - 60px);
    text-align: center;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;                       
    -webkit-box-pack: center;                       
    -ms-flex-pack: center;                       
    justify-content: center;   
    height: calc(100% - 146px);
    img{
        width: 75%;
        margin: 0 auto;
    }     
    .heading{
        margin: 18px 0 8px 0;
        color: $primaryColor;
    }
    .desc{
        color: $secondaryColor;
        font-size: 14px;
    }
} 

